--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,8 @@
-<IfModule mod_rewrite.c>    
-    Options +FollowSymLinks
-    RewriteEngine On
+RewriteEngine On
+RewriteBase /
 
-    RewriteCond %{REQUEST_URI} !-f
-    RewriteCond %{REQUEST_URI} !-d
-    RewriteCond %{REQUEST_URI} !-l
-    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
-</IfModule>
+# Allow any files or directories that exist to be displayed directly
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+RewriteRule ^(.*)$ index.php?$1 [QSA,L]
