--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "paulaodeveloper/teste",
+    "name": "PaulaoDeveloper/chatbotphp",
     "authors": [
         {
             "name": "Paulão Developer",
