--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "email": "PaulaoDeveloper@users.noreply.github.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": "^5.3.3 || ^7.0",
         "pusher/pusher-php-server": "^2.6",
