--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^5.3.3 || ^7.0",
         "pusher/pusher-php-server": "^2.6",
         "guzzlehttp/guzzle": "^6.2",
-        "noahbuscher/macaw": "dev-master"
+        "noahbuscher/macaw": "*"
     },
     "autoload": {
         "psr-4": {
